data/templates/default.latex:  `\usepackage{iftex}` for conditionals.
     Previously, this file guessed that it was being processed by PDF(La)TeX if
it _didn't_ detect it was being processed by Lua(La)TeX or Xe(La)TeX (in order
to only invoke engine-specific macros when it was being processed by the engine
in question.)  This was done using the `ifluatex` package's `\ifluatex` macro
and the `ifxetex` package's `\ifxetex` macro.  Improve upon this logic and make
it more readable and obvious that this is what's going on inside it by:

- no longer using either of the `ifluatex` or `ifxetex` packages
- using the `iftex` package instead, as it also supplies a macro for detecting
  if a file is being processed by PDF(La)TeX
- adjusting the affected macro conditionals to account for this by:
  - replacing all appearances of an ungainly conditional macro construct with
    usages of the `\ifPDFTeX` macro newly available from that `iftex` package
  - replacing all usages of both the `ifluatex` package's `\ifluatex` macro and
    the `ifxetex` package's `\ifxetex` macro with their equivalents in the
    `iftex` package, namely `\ifLuaTeX` and `\ifXeTeX`, respectively,

in this commit.

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -34,15 +34,15 @@ $if(linestretch)$
 \setstretch{$linestretch$}
 $endif$
 \usepackage{amssymb,amsmath}
-\usepackage{ifxetex,ifluatex}
+\usepackage{iftex}
 \usepackage{fixltx2e} % provides \textsubscript
-\ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
+\ifPDFTeX
   \usepackage[$if(fontenc)$$fontenc$$else$T1$endif$]{fontenc}
   \usepackage[utf8]{inputenc}
   \usepackage{textcomp} % provides euro and other symbols
-\else % if luatex or xelatex
+\else % if LuaLaTeX or XeLaTeX
 $if(mathspec)$
-  \ifxetex
+  \ifXeTeX
     \usepackage{mathspec}
   \else
     \usepackage{unicode-math}
@@ -65,7 +65,7 @@ $if(monofont)$
 $endif$
 $if(mathfont)$
 $if(mathspec)$
-  \ifxetex
+  \ifXeTeX
     \setmathfont(Digits,Latin,Greek)[$for(mathfontoptions)$$mathfontoptions$$sep$,$endfor$]{$mathfont$}
   \else
     \setmathfont[$for(mathfontoptions)$$mathfontoptions$$sep$,$endfor$]{$mathfont$}
@@ -75,18 +75,18 @@ $else$
 $endif$
 $endif$
 $if(CJKmainfont)$
-  \ifxetex
+  \ifXeTeX
     \usepackage{xeCJK}
     \setCJKmainfont[$for(CJKoptions)$$CJKoptions$$sep$,$endfor$]{$CJKmainfont$}
   \fi
 $endif$
 $if(luatexjapresetoptions)$
-  \ifluatex
+  \ifLuaTeX
     \usepackage[$for(luatexjapresetoptions)$$luatexjapresetoptions$$sep$,$endfor$]{luatexja-preset}
   \fi
 $endif$
 $if(CJKmainfont)$
-  \ifluatex
+  \ifLuaTeX
     \usepackage[$for(luatexjafontspecoptions)$$luatexjafontspecoptions$$sep$,$endfor$]{luatexja-fontspec}
     \setmainjfont[$for(CJKoptions)$$CJKoptions$$sep$,$endfor$]{$CJKmainfont$}
   \fi
@@ -280,7 +280,7 @@ $for(header-includes)$
 $header-includes$
 $endfor$
 $if(lang)$
-\ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
+\ifPDFTeX
   \usepackage[shorthands=off,$for(babel-otherlangs)$$babel-otherlangs$,$endfor$main=$babel-lang$]{babel}
 $if(babel-newcommands)$
   $babel-newcommands$
@@ -295,11 +295,11 @@ $endfor$
 \fi
 $endif$
 $if(dir)$
-\ifxetex
+\ifXeTeX
   % load bidi as late as possible as it modifies e.g. graphicx
   \usepackage{bidi}
 \fi
-\ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
+\ifPDFTeX
   \TeXXeTstate=1
   \newcommand{\RL}[1]{\beginR #1\endR}
   \newcommand{\LR}[1]{\beginL #1\endL}
