LaTeX: Fix tests after previous change.

--- a/test/command/2378.md
+++ b/test/command/2378.md
@@ -17,6 +17,7 @@ is used.
 x & y\footnote{a footnote}\tabularnewline
 \midrule
 \endfirsthead
+\caption[]{a table}\tabularnewline
 \toprule
 x & y{}\tabularnewline
 \midrule
